dev:: improved sync